--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@ body {
   background-color: #343232;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  display: flex;
+  margin: 0;
+  padding: 0;
 }
